2016-11-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_common.c: the request_rec
    field to be checked in order to determine whether we
    are serving the request is 'header' non 'content_type'.
    This bug didn't surface because their set to the same
    string when a request is handed to the module chain, but
    it's been around ever since.

2016-11-08 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/apache_config.c: fixed conf
    merge that didn't assign the correct cache size
    * rivet/init.tcl: fixed exception scripts checks
    * src/mod_rivet_ng/rivetCore.c: command 'parse -string'
    composes the script and calls directly Tcl_EvalObjEx
    * src/mod_rivet/apache_config.c: fixed same bug
    found in Rivet_MergeConf developing mod_rivet_ng

2016-11-07 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: changed also code
    of command ::rivet::parse, now handling the
    cache and calling directly Tcl
    * src/mod_rivet_ng/mod_rivet_generator.c: now
    calling Tcl_EvalObjEx instead of Rivet_ParseExec
    * src/mod_rivet_ng/mod_rivet_common.c: now initializing
    the thread interpreter private cache with
    the new calls to the cache handler
    * rivet/init.tcl.in: tested also call to AbortScript

2016-11-03 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_cache.[c|h]: new file
    for the cache code created to have uniform file structure
    in order to build the module
    * src/mod_rivet_ng/mod_rivet_cache.c: completed code for cache management
    * src/mod_rivet_ng/rivetCore.c: new command ::rivet::url_script
    returns the full URL referenced script to be parsed
    subsequently
    * src/mod_rivet/mod_rivet_generator.c: we are now
    calling the cache routines, but it won't be needed any longer
    as the cache control and interaction are devolved to 
    the parse routines
   
2016-10-28 Massimo Manghi <mxmanghi@apache.org>