@@ -65,10 +65,10 @@ Rivet_CheckType (request_rec *req)
 {
     rivet_req_ctype ctype = CTYPE_NOT_HANDLED;
 
-    if ( req->content_type != NULL ) {
-        if (STRNEQU( req->content_type, RIVET_TEMPLATE_CTYPE) ) {
+    if ( req->handler != NULL ) {
+        if (STRNEQU( req->handler, RIVET_TEMPLATE_CTYPE) ) {
             ctype  = RIVET_TEMPLATE;
-        } else if ( STRNEQU( req->content_type, RIVET_TCLFILE_CTYPE) ) {
+        } else if ( STRNEQU( req->handler, RIVET_TCLFILE_CTYPE) ) {
             ctype = RIVET_TCLFILE;
         }
     }
