@@ -1,3 +1,10 @@
+2016-11-11 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/init.tcl.it: further development of the
+    url processing procedures allows script level
+    overriding of both request handling and error handling
+    * src/mod_rivet_ng/rivetCore.c: ::rivet::inspect C code
+    argument handling improved
+
 2016-11-09 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet/mod_rivet_common.c: the request_rec
     field to be checked in order to determine whether we
